environments/nonprod/evidence/W2.8/legacy/w2.5.5-default-sg-native.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0b57a86cb71e1b258",
            "IpPermissionsEgress": [],
            "Tags": [
                {
                    "Key": "BackupPolicy",
                    "Value": "none-approved"
                },
                {
                    "Key": "CostCenter",
                    "Value": "CC-CLINIC-MIG-2026"
                },
                {
                    "Key": "DataClassification",
                    "Value": "internal"
                },
                {
                    "Key": "Environment",
                    "Value": "nonprod"
                },
                {
                    "Key": "Name",
                    "Value": "clinic-nonproduction-sg-default"
                },
                {
                    "Key": "System",
                    "Value": "shared-platform"
                },
                {
                    "Key": "Owner",
                    "Value": "IT-Administrator"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "aws-service"
                }
            ],
            "VpcId": "vpc-0dfbc450b3120b16c",
            "SecurityGroupArn": "arn:aws:ec2:ap-east-1:119033255630:security-group/sg-0b57a86cb71e1b258",
            "OwnerId": "119033255630",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": []
        }
    ]
}
